<resources>
    <string name="app_name">泛的零元购</string>

    <!--首页导航栏-->
    <string name="string_main_home">首页</string>
    <string name="string_main_near">附近</string>
    <string name="string_main_cart">购物车</string>
    <string name="string_main_mine">个人</string>
    <!--首页导航栏-->

    <string name="string_home_search_hint">搜索商品/店铺</string>
    <string name="string_home_hot_gift">热门礼品</string>
    <string name="string_home_hot_foods">推荐餐饮</string>
    <string name="string_home_label_more">更多>></string>
    <string name="string_home_hot_hotels">推荐酒店</string>
    <string name="string_home_hot_educations">推荐教育</string>
    <string name="string_home_hot_amuseementds">推荐娱乐</string>
    <string name="string_home_hot_finance">推荐金融</string>
    <string name="string_home_recomend_car">推荐汽车</string>
    <string name="string_home_home_goods">推荐商品</string>
    <string name="string_search">搜索</string>
    <string name="string_food_list_tab_class">品类</string>
    <string name="string_food_list_tab_near">附近</string>
    <string name="string_food_list_tab_sort">排序</string>
    <string name="string_food_list_tab_filter">筛选</string>
    <string name="string_food_shop_check">我要结账</string>
    <string name="string_shop_detail_ad_money">广告费</string>
    <string name="string_shop_detail_no_favorite">未收藏</string>
    <string name="string_shop_detail_favorite">已收藏</string>
    <string name="string_score">综合评分</string>
    <string name="string_shop_detail_evaluate_num">共0条评价</string>
    <string name="string_food_detail_expand_evaluate"><![CDATA[查看全部评价（0）>]]></string>
    <string name="string_shop_near"><![CDATA[附近商铺 >]]></string>
    <string name="string_more">更多</string>
    <string name="string_ads_pop_window_title">当前可返还上级广告费</string>
    <string name="string_ads_pop_window_known">好的，我知道了</string>
    <string name="string_unknown">unknown</string>
    <string name="string_mine_wallet">我的钱包</string>
    <string name="string_mine_order">我的订单</string>
    <string name="string_mine_favorite">我的收藏</string>
    <string name="string_mine_spread">推广中心</string>
    <string name="string_mine_my_assets">我的资产</string>
    <string name="string_mine_card_balance">一卡通余额</string>
    <string name="string_mine_ads_money">我的广告费</string>
    <string name="string_mine_money_points">货币积分</string>
    <string name="string_mine_my_card">我的名片</string>
    <string name="string_mine_my_profile">我的资料</string>
    <string name="string_mine_my_location">我的地址</string>
    <string name="string_mine_market_center">营销人中心</string>
    <string name="string_mine_purchase_qualificatio">购买资格</string>
    <string name="string_mine_merchant_charging_card">商家充值卡</string>
    <string name="string_mine_merchant_members">商家会员</string>
    <string name="string_mine_business_report">商家报表</string>
    <string name="string_mine_business_order">商家订单</string>
    <string name="string_mine_online_service">在线客服</string>
    <string name="string_mine_contact_us">联系我们</string>
    <string name="string_mine_shop_stay">商铺入驻</string>
    <string name="string_cart_cart">购物</string>
    <string name="string_cart_exchange">兑换</string>
    <string name="string_cart_goods_total_num">产品总数：</string>
    <string name="string_cart_goods_total_price">总计：</string>
    <string name="string_cart_goods_one_key_check">一键支付</string>
    <string name="string_cart_fragment_title">购物车</string>
    <string name="string_cart_group_edit">编辑</string>
    <string name="string_cart_child_good_del">删除</string>
    <string name="string_near_fragment_title">附近</string>
    <string name="string_near_list_tab_all">全部</string>
    <string name="string_near_list_tab_near">附近</string>
    <string name="string_near_list_tab_sort">排序</string>
    <string name="string_near_list_tab_class">分类</string>
    <string name="string_dialog_cancel">取消</string>
    <string name="string_dialog_ok">确定</string>
    <string name="string_dialog_title">温馨提示</string>
    <string name="string_dialog_cart_good_del">确定删除该商品吗？</string>
    <string name="string_mine_login">登录</string>
    <string name="string_login_register">立即注册</string>
    <string name="string_login_forget">忘记密码</string>
    <string name="string_login">登录</string>
    <string name="string_login_account_hint">请输入登录账号</string>
    <string name="string_login_password_hint">请输入登录密码</string>
    <string name="string_register_invite_hint">请输入邀请码</string>
    <string name="string_register_password_again_hint">请再次输入密码</string>
    <string name="string_register_password_hint">请输入密码</string>
    <string name="string_register_get_code">获取验证码</string>
    <string name="string_register">注册</string>
    <string name="string_register_code_hint">请输入验证码</string>
    <string name="string_recharge_label">充值金额</string>
    <string name="string_recharge_receiver">收款方：</string>
    <string name="string_pay_zhifubao">支付宝支付</string>
    <string name="string_pay_weixin">微信支付</string>
    <string name="string_recharge_right_now_pay">立即支付</string>
    <string name="string_mine_shop_stay_name">姓名：</string>
    <string name="string_mine_shop_stay_tel">电话：</string>
    <string name="string_mine_shop_stay_shop_name">店铺名：</string>
    <string name="string_mine_shop_stay_invite">邀请码：</string>
    <string name="string_mine_shop_stay_code">验证码：</string>
    <string name="string_mine_shop_stay_remark">备注：</string>
    <string name="string_mine_shop_stay_commit">申请入驻</string>
    <string name="string_mine_shop_stay_name_hint">请输入姓名</string>
    <string name="string_mine_shop_stay_tel_hint">请输入电话</string>
    <string name="string_mine_shop_stay_invite_hint">请输入邀请码</string>
    <string name="string_mine_shop_stay_code_hint">请输入验证码</string>
    <string name="string_mine_shop_stay_remark_hint">请输入备注</string>
    <string name="string_confirm_pay">确认付款</string>
    <string name="string_offline_pay_money">消费金额</string>
    <string name="string_pay_wallet">余额支付</string>
    <string name="string_address_set_normal">设为默认</string>
    <string name="string_address_delete">删除</string>
    <string name="string_address_edit">编辑</string>
    <string name="string_mine_address_add">添加新地址</string>
    <string name="string_online_pay_add_address">添加地址+</string>
    <string name="string_online_pay_check">立即支付</string>
    <string name="string_goods_order_express_fee">运费</string>
    <string name="string_goods_order_remark_hint">请填写备注</string>
    <string name="string_address_edit_receiver">收件人</string>
    <string name="string_address_edit_receiver_hint">请输入收件人姓名</string>
    <string name="string_address_edit_phone">手机号码</string>
    <string name="string_address_edit_phone_hint">请输入手机号码</string>
    <string name="string_address_edit_province">省份</string>
    <string name="string_address_edit_city">城市</string>
    <string name="string_address_edit_area">区域</string>
    <string name="string_address_edit_detail_hint">请输入详细地址</string>
    <string name="string_address_edit_confirm">完成</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="string_favorite_goods">名品</string>
    <string name="string_favorite_foods">餐饮</string>
    <string name="string_favorite_hotels">酒店</string>
    <string name="string_favorite_shops">商铺</string>
    <string name="string_shop_detail_ad_content">分享多多，收入多多！\n让您的朋友关注您的名片，或分享您的消费，朋友们完成注册，并在泛的零元购平台消费，您将获得两级推荐奖励---广告费。T+1到账，随时提取。</string>
    <string name="string_cart_no_goods_tips">购物车空空如也~</string>
    <string name="string_personal_info_name">昵称</string>
    <string name="string_personal_info_sex">性别</string>
    <string name="string_personal_info_age">生日</string>
    <string name="string_personal_info_phone">手机</string>
    <string name="string_personal_info_weixin">微信</string>
    <string name="string_search_history">历史记录</string>
    <string name="string_evaluate_submit">提交评价</string>
    <string name="string_evaluate_send_evaluate">发货速度</string>
    <string name="string_evaluate_server_evaluate">服务态度</string>
    <string name="string_evaluate_good_evaluate">商品评价</string>

    <!--我的钱包-->
    <string name="string_wallet">我的钱包</string>
    <string name="string_cash_balance">现金余额</string>
    <string name="string_revenue_management">收益管理</string>
    <string name="string_current_balance">当前余额</string>
    <string name="string_available_income">可提现收益</string>
    <string name="string_recharge">充值</string>
    <string name="string_balance_recharge_record">余额充值记录</string>
    <string name="string_balance_consumption_record">余额消费记录</string>
    <string name="string_current_advertising_fee">当前广告费</string>
    <string name="string_marketing_persons_income">营销人收益</string>
    <string name="string_present_record">提现记录</string>
    <string name="string_advertising_fee_record">广告费记录</string>
    <string name="string_marketing_revenue_record">营销收益记录</string>
    <string name="string_amount_of_cash">提现金额</string>
    <string name="string_add_alipay">添加支付宝</string>
    <string name="string_add_weixin">添加微信支付</string>
    <string name="string_add_bank_card">添加银行卡</string>
    <string name="string_select_bank">选择银行</string>

    <string name="string_search_list_goods">商品</string>
    <string name="string_search_list_shop">商铺</string>

    <string name="string_pay_zhifubao_account">支付宝账户</string>
    <string name="string_pay_weixin_account">微信支付账户</string>

    <!--推广中心-->
    <string name="string_promotion_of_advertising_fees">推广广告费</string>
    <string name="string_my_members">我的会员</string>
    <string name="string_membership_income">会员收益</string>
    <string name="string_member_sharing">会员分享</string>
    <string name="string_my_business_card">我的名片</string>
    <string name="string_login_phone_hint">请输入手机号码</string>
    <string name="string_forget_password_hint">请输入新密码</string>
    <string name="string_forget_password_again_hint">请再次输入新密码</string>

    <string name="string_serial_number">序号</string>
    <string name="string_member">会员</string>
    <string name="string_the_number_of">层数</string>
    <string name="string_consumption">消费</string>
    <string name="string_rebate">返利</string>

    <!--sxliu-->
    <string name="string_car_no_data_text1">哎呀！购物车还是空空的</string>
    <string name="string_car_no_data_text2">赶紧点击去挑选商品吧</string>
    <string name="string_snap_up">去抢购</string>
</resources>
