<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <FrameLayout
        android:id="@+id/fm_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">
    </FrameLayout>

    <RadioGroup
        android:id="@+id/rg_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/MainRadioButtonTheme"
            android:drawableTop="@drawable/draw_main_rb_home"
            android:text="@string/string_main_home" />

        <RadioButton
            android:id="@+id/rb_near"
            style="@style/MainRadioButtonTheme"
            android:drawableTop="@drawable/draw_main_rb_near"
            android:text="@string/string_main_near" />

        <RadioButton
            android:id="@+id/rb_cart"
            style="@style/MainRadioButtonTheme"
            android:text="@string/string_main_cart"
            android:drawableTop="@drawable/draw_main_rb_cart" />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/MainRadioButtonTheme"
            android:text="@string/string_main_mine"
            android:drawableTop="@drawable/draw_main_rb_mine" />

    </RadioGroup>
    </LinearLayout>
</RelativeLayout>
