<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_login_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_margin="70dp"
        android:src="@mipmap/ic_login_logo"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_login_account"
        style="@style/style_pic_edit_text"
        android:drawableLeft="@mipmap/ic_login_account"
        android:hint="@string/string_login_account_hint"
        android:inputType="phone"
        android:maxLength="11"/>

    <EditText
        android:id="@+id/et_login_password"
        style="@style/style_pic_edit_text"
        android:drawableLeft="@mipmap/ic_login_password"
        android:hint="@string/string_login_password_hint"
        android:layout_marginTop="30dp"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="10dp"
            android:id="@+id/tv_login_register"
            android:textColor="@color/white"
            android:text="@string/string_login_register"
            android:drawablePadding="5dp"
            android:drawableLeft="@mipmap/ic_login_register_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:id="@+id/tv_login_forget"
            android:textColor="@color/white"
            android:text="@string/string_login_forget"
            android:drawablePadding="5dp"
            android:drawableLeft="@mipmap/ic_login_forget_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="40dp"
        android:background="@drawable/draw_login_login_button_bg"
        android:text="@string/string_login"
        android:textColor="@color/color_theme"
        android:textSize="@dimen/text_16sp" />

</LinearLayout>