<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_cart_fragment_title"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_theme"
        android:gravity="center"
        android:text="@string/string_cart_fragment_title"
        android:textColor="@color/white" />

    <RadioGroup
        android:id="@+id/rg_cart_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_cart_tab_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/string_cart_cart"
            android:textColor="@color/color_cart_tab_text"
            android:textSize="@dimen/text_16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/color_bg" />

        <RadioButton
            android:id="@+id/rb_cart_tab_exchange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/string_cart_exchange"
            android:textColor="@color/color_cart_tab_text"
            android:textSize="@dimen/text_16sp" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_bg" />

    <TextView
        android:id="@+id/tv_cart_no_goods_tips"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/string_cart_no_goods_tips"
        android:visibility="gone" />

    <ExpandableListView
        android:id="@+id/elv_cart_goods_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="1px"
        android:listSelector="#00000000"
        android:longClickable="true"
        android:scrollbars="none"
        android:visibility="visible" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_cart_total_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tv_cart_goods_total_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_cart_goods_total_num"
                android:textColor="@color/white"
                android:textSize="@dimen/text_12sp" />

            <TextView
                android:id="@+id/tv_cart_goods_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_cart_goods_total_price"
                android:textColor="@color/white"
                android:textSize="@dimen/text_12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_cart_goods_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/color_theme"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/string_cart_goods_one_key_check"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16sp" />

    </LinearLayout>

</LinearLayout>